--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hdkey",
-  "version": "2.1.0",
+  "name": "@hyperbitjs/hdkey",
+  "version": "0.0.1",
   "description": "Bitcoin BIP32 hierarchical deterministic keys",
   "main": "lib/hdkey.js",
   "repository": {
